Обновлен дизайн и контент сайта

--- a/index.html
+++ b/index.html
@@ -2,11 +2,56 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Мой сайт</title>
+    <title>Пробный сайт — Дарья Белова</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Привет!</h1>
-    <p>Это мой статический сайт для практической работы №7.</p>
+
+<header class="hero">
+    <h1>Привет 👋</h1>
+    <p>Я Дарья Белова</p>
+    <p class="subtitle">Это мой пробный сайт для лабораторной работы с Git</p>
+    <a href="#about" class="btn">Листай вниз ⬇️</a>
+</header>
+
+<section id="about" class="section light">
+    <h2>Обо мне</h2>
+    <p>
+        Меня зовут Дарья Белова. Этот сайт создан в рамках выполнения лабораторной работы,
+        посвящённой работе с системой контроля версий Git и платформой GitHub.
+    </p>
+    <p>
+        Цель работы — научиться создавать репозитории, работать с ветками, фиксировать изменения
+        и публиковать проекты в интернете.
+    </p>
+</section>
+
+<section class="section dark">
+    <h2>Зачем нужен Git?</h2>
+    <p>
+        Git позволяет отслеживать изменения в файлах, возвращаться к предыдущим версиям проекта,
+        работать с ветками и безопасно экспериментировать с кодом.
+    </p>
+    <p>
+        Это незаменимый инструмент для программистов, веб-разработчиков и командной работы.
+    </p>
+</section>
+
+<section class="section gradient">
+    <h2>Что сделано в этой работе</h2>
+    <ul>
+        <li>Установлен Git</li>
+        <li>Создан локальный репозиторий</li>
+        <li>Созданы коммиты и ветки</li>
+        <li>Проект загружен на GitHub</li>
+        <li>Сайт опубликован через GitHub Pages</li>
+    </ul>
+</section>
+
+<footer class="footer">
+    <p>© 2026 Дарья Белова</p>
+    <p>Лабораторная работа по Git</p>
+</footer>
+
 </body>
 </html>
